# firefly

./: .eslintcache  .eslintignore  .eslintrc.js  .eslintrc.json  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc.yml  .snyk  404.html  Branch  CLI package  CONTRIBUTING.md  LICENSE  README.md  crowdin.yml  events.json  index.html  package-lock.json  package.json  robots.txt  tsconfig.json  tsconfig.lint.json
.changes/: config.json  setup-covector.md
.github/: CODEOWNERS  (+5 more)
backend/: Cargo.toml  README.md
backend/api-wrapper/: account.ts  address.ts  bridge.ts  events.ts  index.ts  message.ts  wallet.ts
backend/bindings/c/: .gitignore  Cargo.toml  Makefile  README.md  header.h  main.c
backend/bindings/c/include/: wallet.h
backend/bindings/c/src/: lib.rs
backend/bindings/capacitor/: WalletActorSystemCapacitorBinding.podspec  package.json
backend/bindings/capacitor/android/: build.gradle
backend/bindings/capacitor/ios/: .gitignore
backend/bindings/capacitor/ios/Plugin/: Plugin.h  Plugin.m  Plugin.swift
backend/bindings/capacitor/ios/Plugin.xcodeproj/: project.pbxproj
backend/bindings/capacitor/ios/Plugin/Libraries/: libwallet.h
backend/bindings/capacitor/src/: definitions.ts
backend/bindings/node/: .gitignore  README.md  package.json
backend/bindings/node/lib/: .gitignore  index.d.ts  index.js  package.json  rollup.config.js  tsconfig.json
backend/bindings/node/lib/src/: index.ts
backend/bindings/node/native/: Cargo.toml
backend/bindings/node/native/src/: lib.rs
backend/bindings/node/test/: index.js
backend/src/: actors.rs  lib.rs
(+390 files in other folders)
