[package]
name = "wallet-actor-system"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
chronicle-common = { git = "https://github.com/iotaledger/chronicle.rs", rev = "ab457a1" }
once_cell = "1.4.0"
iota-wallet-actor = { git = "https://github.com/iotaledger/actors.rs", branch = "feat/wallet" }
serde_json = "1.0"
log = "0.4"
