[package]
name = "wallet-actor-system"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
edition = "2018"
exclude = ["/bindings", "/api-wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
once_cell = "1.4.0"
iota-wallet-actor = { git = "https://github.com/iotaledger/actors.rs", branch = "feat/wallet" }
serde_json = "1.0"
riker = "0.4"
serde = "1.0"
